# Aquisicao.Clinicas

./: .gitignore  README.md  pyproject.toml
aquisicao_clinicas/: __init__.py  conclusao.md  contexto.md  dicionario_dados.md  eda.ipynb  eda_lib.py  etl.ipynb  hipoteses.ipynb  library.py  metricas.ipynb  metricas.md
sql/: clinics.sql  erd_aquisicao_clinicas_star_schema.pgerd  erd_aquisicao_clinicas_star_schema.sql  metricas_conversao_trial.sql  metricas_credenciamento_trial.sql  metricas_desempenho_trial.sql  metricas_duracao_trial.sql  metricas_interacao_durante_trial.sql  subscriptions.sql
