[tool.poetry]
name = "aquisicao-clinicas"
version = "0.1.0"
description = ""
authors = ["Alexandre Andreo <alexandre.andreo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"
setuptools = "^70.2.0"
numpy = "1.26.4"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
openpyxl = "^3.1.5"
datetime = "^5.5"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.34"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
statsmodels = "^0.14.2"
pingouin = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
